force-app/main/default/objects/Control_de_Cambios__c/Control_de_Cambios__c.object-meta.xml
<CustomObject>
    <label>Control de Cambios</label>
    <nameField>
        <label>Número</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Control de Cambios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>