force-app/main/default/objects/Control_de_Cambios__c/fields/HU_Tipo__c.field-meta.xml
<CustomField>
    <fullName>HU_Tipo__c</fullName>
    <label>HU Tipo</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HU</fullName>
            </value>
            <value>
                <fullName>BUG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>