force-app/main/default/objects/Control_de_Cambios__c/fields/Responsable__c.field-meta.xml
<CustomField>
    <fullName>Responsable__c</fullName>
    <label>Responsable</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>