force-app/main/default/objects/Control_de_Cambios__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>HU_Tipo__c</columns>
    <columns>Responsable__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>